syntax = "proto3";
import "google/protobuf/empty.proto";

service Save {
	rpc Save(SaveRequest) returns (SaveResponse);
}

message SaveRequest {
	string title = 1;
	string content = 2;
	optional string id = 3;
}

message SaveResponse {
	string id = 1;
}

service Load {
	rpc Load(LoadRequest) returns (LoadResponse);
	rpc LoadMetadata(google.protobuf.Empty) returns (LoadMetadataResponse);
}

message LoadRequest {
	string id = 1;
}

message LoadResponse {
	string id = 1;
	string content = 2;
}

message LoadMetadataResponse {
	string Metadata = 1;
}
